--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-project(intersection)
+project(vertex-cover)
 
 if (EXISTS "${CMAKE_SOURCE_DIR}/minisat")
   add_subdirectory(minisat)
@@ -18,9 +18,9 @@ set (CMAKE_CXX_FLAGS "-std=c++11 -Wall -pthread -g${CMAKE_CXX_FLAGS}")
 # expose minisat header files
 include_directories(${CMAKE_SOURCE_DIR}/minisat)
 ## add additional .cpp files if needed
-add_executable(intersection-prj intersection-proj.cpp parse_line.cpp graph.cpp)
+add_executable(vertex-cover-prj vertex-cover-proj.cpp parse_line.cpp graph.cpp)
 # link minisat library with the main executable
-target_link_libraries(intersection-prj minisat-lib-static)
+target_link_libraries(vertex-cover-prj minisat-lib-static)
 
 
 
